<resources>
    <string name="app_name">Okulus</string>
    <string name="passrestore"><u>Забыли пароль?</u></string>
    <string name="user_login">Личный кабинет заказчика</string>
    <string name="op_login">Личный кабинет диспетчера</string>
    <string name="img_discr">okulus</string>
    <string name="log_in">Войти</string>
    <string name="img">1</string>
    <string name="mytickts"><b>Мои заявки</b></string>
    <string name="wwww">Множественный выбор</string>
    <string name="adawd">Тип исследования и дата</string>
    <string name="adwfaw">Выбранный объект</string>
</resources>