<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".log_in_op">

    <EditText
        android:id="@+id/user_mail"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:layout_marginTop="274dp"
        android:autofillHints=""
        android:background="@drawable/back"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="cock@mail.ru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:layout_marginTop="339dp"
        android:autofillHints=""
        android:background="@drawable/back"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="cum boi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/log_in"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:layout_marginTop="404dp"
        android:backgroundTint="#4390A7"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passrestore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="493dp"
        android:text="@string/passrestore"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="232dp"
        android:layout_height="45dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="90dp"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_126okulus_main" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="255dp"
        android:text="Логин"
        android:textColor="#4390A7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="320dp"
        android:text="Пароль"
        android:textColor="#4390A7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>